# pba-alumni-bot

./: Cargo.toml  kusama-asset-hub-metadata.scale
src/: main.rs
