[package]
name = "pba-alumni-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.37.0"
shuttle-secrets = "0.37.0"
shuttle-serenity = "0.37.0"
tokio = "1.26.0"
tracing = "0.1.37"
subxt = "0.34.0"
subxt-signer = "0.34.0"
hex = "0.4.3"
poise = "0.6.1"
